--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte.properties
@@ -2,10 +2,11 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Procesos Productivos
+titulo=CONCEPTOS SOPORTES
+titulo1=Conceptos Soportes
 codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
-centroCosto=Centro Costo
+concepto=Concepto
+operando=Operando
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -16,16 +17,19 @@ xml=Exportar a XML
 pdf=Exportar a PDF
 nuevo=Nuevo Proceso Productivo
 eliminar=Borrar Proceso Productivo
-duplicar=Duplicar Proceso Productivo
+duplicar=Duplicar Concepto Soporte
 rastro=Rastro
 refrescar=Refrescar
 aceptar=Aceptar
 atras=Atras
-centroCostoD=CENTROS COSTOS
-lovvacio=No se encontraron resultados con el criterio de busqueda
-buscarC=Buscar Centro Costo:
+mostrarTodos=Mostrar Todos
+buscarConcepto=Buscar Conceptos
+conceptosD=CONCEPTOS
 lovVacioD=No se encontraron resultados con el criterio de busqueda
+lovvacio=No se encontraron resultados con el criterio de busqueda
 nombre=Nombre
+operandos=Operandos
+buscarOperando=Buscar Operando : 
 atencion=ATENCI\u00d3N...!
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
@@ -46,20 +50,19 @@ errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros as
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'PROCESOSPRODUCTIVOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 editarCodigo=Editar C\u00f3digo
-editarDescripcion=Editar Descripci\u00f3n
-editarCentroCosto=Editar Centro Costo
+editarConcepto=Editar Concepto
+editarOperando=Editar Operando
 nuevoD=Nuevo Registro
-nuevoDD=Ingresar Nuevo Proceso Productivo
+nuevoDD=Ingresar Nuevo Concepto Soporte
 codigoN=*C\u00f3digo:
+conceptoN=*Concepto:
 codigoNN=C\u00f3digo
-descripcionN=*Descripci\u00f3n:
-descripcionNN=Descripci\u00f3n
-centroCostoN=*Centro Costo:
-centroCostoNN=Centro Costo
+conceptoNN=Concepto
+operandoN=*Operando:
+operandoNN=Operando
 limpiar=Limpiar
 agregar=Agregar
 duplicarD=Duplicar Registro
-duplicarDD=Duplicar Proceso Productivo
 codigoE=Codigo
-descripcionE=Descripcion
-centroCostoE=Centro_Costo
+conceptoE=Concepto
+operandoE=Operando
