--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulacontratoentidad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulacontratoentidad.properties
@@ -2,10 +2,10 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Procesos Productivos
-codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
-centroCosto=Centro Costo
+titulo=Tipo Entidad
+titulo1=Tipo de Entidad
+tipoEntidad=Tipo Entidad
+
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -14,18 +14,19 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Proceso Productivo
-eliminar=Borrar Proceso Productivo
-duplicar=Duplicar Proceso Productivo
+nuevo=Nuevo Formula Asegurada
+eliminar=Borrar Formula Asegurada
+duplicar=Duplicar Formula Asegurada
 rastro=Rastro
 refrescar=Refrescar
 aceptar=Aceptar
 atras=Atras
-centroCostoD=CENTROS COSTOS
 lovvacio=No se encontraron resultados con el criterio de busqueda
-buscarC=Buscar Centro Costo:
-lovVacioD=No se encontraron resultados con el criterio de busqueda
+tipoEntidadD=TIPOS ENTIDADES
+buscarTipoEntidad=buscar Tipo Entidad :
+codigo=C\u00f3digo
 nombre=Nombre
+
 atencion=ATENCI\u00d3N...!
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
@@ -38,28 +39,18 @@ borrado2=Registros
 guardadoExitoso=Se ha guardado correctamente los cambios
 validarNuevo=Para agregar es necesario adicionar:
 atencionRastros=ATENCI\u00d3N
-confirmarRastroHistorico=La tabla PROCESOSPRODUCTIVOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla FORMULASCONTRATOSENTIDADES tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'PROCESOSPRODUCTIVOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
-editarCodigo=Editar C\u00f3digo
-editarDescripcion=Editar Descripci\u00f3n
-editarCentroCosto=Editar Centro Costo
+errorObjetosDB=La tabla 'FORMULASCONTRATOSENTIDADES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+editarTipoEntidad=Editar Tipo Entidad
 nuevoD=Nuevo Registro
-nuevoDD=Ingresar Nuevo Proceso Productivo
-codigoN=*C\u00f3digo:
-codigoNN=C\u00f3digo
-descripcionN=*Descripci\u00f3n:
-descripcionNN=Descripci\u00f3n
-centroCostoN=*Centro Costo:
-centroCostoNN=Centro Costo
-limpiar=Limpiar
+nuevoDD=Ingresar Nueva Formula Contrato Entidad
+tipoEntidadN=*Tipo Entidad:
 agregar=Agregar
+limpiar=Limpiar
 duplicarD=Duplicar Registro
-duplicarDD=Duplicar Proceso Productivo
-codigoE=Codigo
-descripcionE=Descripcion
-centroCostoE=Centro_Costo
+duplicarDD=Duplicar Formula Contrato Tipo Entidad
