--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/poblacionobjetivo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/poblacionobjetivo.properties
@@ -2,10 +2,10 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Procesos Productivos
-codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
-centroCosto=Centro Costo
+titulo=Poblaci\u00f3n Objetivo
+
+
+
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -14,52 +14,49 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Proceso Productivo
-eliminar=Borrar Proceso Productivo
-duplicar=Duplicar Proceso Productivo
+nuevo=Nuevo Poblaci\u00f3n 
+eliminar=Borrar Poblaci\u00f3n 
+duplicar=Duplicar Poblaci\u00f3n 
 rastro=Rastro
 refrescar=Refrescar
 aceptar=Aceptar
 atras=Atras
-centroCostoD=CENTROS COSTOS
 lovvacio=No se encontraron resultados con el criterio de busqueda
-buscarC=Buscar Centro Costo:
-lovVacioD=No se encontraron resultados con el criterio de busqueda
-nombre=Nombre
+
+
+
 atencion=ATENCI\u00d3N...!
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
 no=No
 cancelar=Cancelar
-necesita=Necesita
+necesita=Necesita :
 validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 borrado1=Se han borrado
 borrado2=Registros
 guardadoExitoso=Se ha guardado correctamente los cambios
 validarNuevo=Para agregar es necesario adicionar:
 atencionRastros=ATENCI\u00d3N
-confirmarRastroHistorico=La tabla PROCESOSPRODUCTIVOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla SOPOBLACIONOBJETIVOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'PROCESOSPRODUCTIVOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'SOPOBLACIONOBJETIVOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+
+titulo1=Poblaciones
+codigo=C\u00f3digo
+descripcion=Descripci\u00f3n
 editarCodigo=Editar C\u00f3digo
 editarDescripcion=Editar Descripci\u00f3n
-editarCentroCosto=Editar Centro Costo
 nuevoD=Nuevo Registro
-nuevoDD=Ingresar Nuevo Proceso Productivo
+nuevoDD=Agregar Nueva Poblaci\u00f3n
 codigoN=*C\u00f3digo:
-codigoNN=C\u00f3digo
-descripcionN=*Descripci\u00f3n:
-descripcionNN=Descripci\u00f3n
-centroCostoN=*Centro Costo:
-centroCostoNN=Centro Costo
-limpiar=Limpiar
+descripcionN=*Descripcion:
 agregar=Agregar
+limpiar=Limpiar
 duplicarD=Duplicar Registro
-duplicarDD=Duplicar Proceso Productivo
+=Duplicar Poblacion
 codigoE=Codigo
 descripcionE=Descripcion
-centroCostoE=Centro_Costo
