--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo.properties
@@ -2,10 +2,13 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Procesos Productivos
+titulo=Clase Ausentismo
+titulo1=Clases de Ausentismos
 codigo=C\u00f3digo
 descripcion=Descripci\u00f3n
-centroCosto=Centro Costo
+tipo=Tipo
+
+
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -14,52 +17,51 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Proceso Productivo
-eliminar=Borrar Proceso Productivo
-duplicar=Duplicar Proceso Productivo
+nuevo=Nuevo Formula Asegurada
+eliminar=Borrar Formula Asegurada
+duplicar=Duplicar Formula Asegurada
 rastro=Rastro
 refrescar=Refrescar
 aceptar=Aceptar
 atras=Atras
-centroCostoD=CENTROS COSTOS
 lovvacio=No se encontraron resultados con el criterio de busqueda
-buscarC=Buscar Centro Costo:
-lovVacioD=No se encontraron resultados con el criterio de busqueda
-nombre=Nombre
+tipoAusentismo=TIPOS DE AUSENTISMOS
+
+
+
 atencion=ATENCI\u00d3N...!
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
 no=No
 cancelar=Cancelar
-necesita=Necesita
+necesita=Necesita :
 validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 borrado1=Se han borrado
 borrado2=Registros
 guardadoExitoso=Se ha guardado correctamente los cambios
 validarNuevo=Para agregar es necesario adicionar:
 atencionRastros=ATENCI\u00d3N
-confirmarRastroHistorico=La tabla PROCESOSPRODUCTIVOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla CLASESAUSENTISMOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'PROCESOSPRODUCTIVOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
-editarCodigo=Editar C\u00f3digo
-editarDescripcion=Editar Descripci\u00f3n
-editarCentroCosto=Editar Centro Costo
+errorObjetosDB=La tabla 'CLASESAUSENTISMOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+editarCodigo=Editar Codigo
 nuevoD=Nuevo Registro
-nuevoDD=Ingresar Nuevo Proceso Productivo
-codigoN=*C\u00f3digo:
-codigoNN=C\u00f3digo
-descripcionN=*Descripci\u00f3n:
-descripcionNN=Descripci\u00f3n
-centroCostoN=*Centro Costo:
-centroCostoNN=Centro Costo
-limpiar=Limpiar
+editarDescripcion=Editar Descripcion
+editarTipo=Editar Tipo
+nuevoDD=Agregar Nueva Clase Ausentismo
+codigoD=*Codigo:
+nombreD=*Nombre:
+tipoD=*Tipo:
+#Add
 agregar=Agregar
+#Clean
+limpiar=Limpiar
 duplicarD=Duplicar Registro
-duplicarDD=Duplicar Proceso Productivo
+duplicarDD=Duplicar Clase Ausentismo
 codigoE=Codigo
 descripcionE=Descripcion
-centroCostoE=Centro_Costo
+tipoE=Tipo
