--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulasaseguradas.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulasaseguradas.properties
@@ -2,10 +2,11 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Procesos Productivos
-codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
-centroCosto=Centro Costo
+titulo=F\u00d3RMULAS ASEGURADAS
+titulo1=F\u00f3rmulas Aseguradas
+formula=F\u00f3rmula
+proceso=Proceso
+periodicidad=Periodicidad
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -14,18 +15,24 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Proceso Productivo
-eliminar=Borrar Proceso Productivo
-duplicar=Duplicar Proceso Productivo
+nuevo=Nuevo Formula Asegurada
+eliminar=Borrar Formula Asegurada
+duplicar=Duplicar Formula Asegurada
 rastro=Rastro
 refrescar=Refrescar
 aceptar=Aceptar
 atras=Atras
-centroCostoD=CENTROS COSTOS
 lovvacio=No se encontraron resultados con el criterio de busqueda
-buscarC=Buscar Centro Costo:
-lovVacioD=No se encontraron resultados con el criterio de busqueda
+formulasD=F\u00d3RMULAS
+buscarFormulas=Buscar F\u00f3rmula : 
 nombre=Nombre
+nombreLargo=Nombre Largo
+procesoD=PROCESO
+buscarProcesos=Buscar Proceso :
+codigo=C\u00f3digo
+descripcion=Descripci\u00f3n
+perdiodicidadesD=PERIODICIDADES
+buscarPeriodicidades=Buscar Periodicidad :
 atencion=ATENCI\u00d3N...!
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
@@ -38,28 +45,26 @@ borrado2=Registros
 guardadoExitoso=Se ha guardado correctamente los cambios
 validarNuevo=Para agregar es necesario adicionar:
 atencionRastros=ATENCI\u00d3N
-confirmarRastroHistorico=La tabla PROCESOSPRODUCTIVOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla FORMULASASEGURADAS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'PROCESOSPRODUCTIVOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
-editarCodigo=Editar C\u00f3digo
-editarDescripcion=Editar Descripci\u00f3n
-editarCentroCosto=Editar Centro Costo
+errorObjetosDB=La tabla 'FORMULASASEGURADAS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+editarFormula=Editar F\u00f3rmula
+editarProceso=Editar Proceso
+editarPeriodicidad=Editar Periodicidad
 nuevoD=Nuevo Registro
-nuevoDD=Ingresar Nuevo Proceso Productivo
-codigoN=*C\u00f3digo:
-codigoNN=C\u00f3digo
-descripcionN=*Descripci\u00f3n:
-descripcionNN=Descripci\u00f3n
-centroCostoN=*Centro Costo:
-centroCostoNN=Centro Costo
-limpiar=Limpiar
+nuevoDD=Agregar Nuevo Formulas Aseguradas
+formulaN=*F\u00f3rmula:
+formulaNN=F\u00f3rmula
+procesoN=*Proceso:
+procesoNN=Proceso
+periodicidadN=*Periodicidad:
+periodicidadNN=Periodicidad
 agregar=Agregar
+#Clean
+limpiar=Limpiar
 duplicarD=Duplicar Registro
-duplicarDD=Duplicar Proceso Productivo
-codigoE=Codigo
-descripcionE=Descripcion
-centroCostoE=Centro_Costo
+duplicarDD=Duplicar Formulas Aseguradas
