--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -47,7 +47,7 @@ centrocostoD=CentroCosto:
 nombrejefeD=NombreJefe:
 #DIALOGO EMPLEADO JEFE
 empleadosEJ=Empleados
-ingreseEJ=Ingrese valor a buscar
+ingreseEJ=Ingrese un valor a buscar
 buscarEJ=Buscar Empleado: 
 codigoEJ=Codigo Empleado
 primerapellidoEJ=Primer Apellido
