--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -97,3 +97,5 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'VIGENCIASTIPOSCONTRATOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 fispX=Fecha Inicio Proceso Sustitucion
 fispXX=Fecha_Inicio_Proceso_Sustitucion
+fispH=Fecha Sus.
+fifH=Fecha Flex.
