--- a/DesignerRHN/DesignerRHN-war/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-war/nbproject/project.properties
@@ -45,7 +45,7 @@ file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
 file.reference.poi-excelant-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-excelant-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-3.9-20121203.jar
 file.reference.poi-ooxml-schemas-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-schemas-3.9-20121203.jar
-file.reference.primefaces-3.5.jar=..\\Librerias\\primefaces-3.5.jar
+file.reference.primefaces-3.5-V1.0.jar=..\\Librerias\\primefaces-3.5-V1.0.jar
 file.reference.primefaces-extensions-0.7.1.jar=..\\Librerias\\primefaces-extensions-0.7.1.jar
 includes=**
 j2ee.compile.on.save=true
@@ -69,12 +69,12 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.9-20121203.jar}:\
     ${file.reference.poi-ooxml-schemas-3.9-20121203.jar}:\
     ${file.reference.iText-2.1.7.jar}:\
-    ${file.reference.primefaces-3.5.jar}:\
     ${file.reference.primefaces-extensions-0.7.1.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
     ${reference.DesignerRHN-ejb.dist}:\
     ${file.reference.all-themes-1.0.10.jar}:\
-    ${file.reference.jasperreports-5.5.0.jar}
+    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.primefaces-3.5-V1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
