--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -289,3 +289,5 @@ buscarCDE=Buscar Configuracion:
 campo=Campo
 detalleBusqueda=Detalle de Busqueda
 eliminarColumna=Borrar Columna
+anadirParametros=[ A\u00f1adir a Parametros ]
+refrescar=Refrescar
