--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -25,15 +25,15 @@ p=P
 s=S
 #LOV CIUDADES
 ciudadesC=Ciudades
-buscarC=Buscar Ciudades
+buscarC=Buscar Ciudades:
 codigoC=C\u00f3digo
 ciudadC=Ciudad
 departamentoC=Departamento
 #LOV MOTIVO
 motivosM=Motivos Contratos
-buscarM=Buscar Motivo Contratos: 
+buscarM=Buscar Motivo: 
 codigoM=C\u00f3digo
-nombreM=Nombre del Motivo del Contrato
+nombreM=Nombre
 #LOV TIPOS CONTRATOS
 tiposT=Tipos Contratos
 buscarT=Buscar Tipo Contrato: 
