--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/retencion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/retencion.properties
@@ -68,7 +68,7 @@ editarPorcentajeR=Porcentaje
 editarValorR=Valor
 editarAdicionaR=Adiciona UVT
 #Elegir Tabla
-elegirTabla=Escoja una tabla para ingresar un registro
+elegirTabla=Escoja la tabla para la cual desea ingresar un nuevo registro
 vigenciasretenciones=Vigencias Retenciones
 #Nuevo Registro
 nuevoregistroV=Nuevo Registro - Vigencias Retenciones
