--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -25,15 +25,15 @@ p=P
 s=S
 #LOV CIUDADES
 ciudadesC=Ciudades
-buscarC=Buscar Ciudades
+buscarC=Buscar Ciudades:
 codigoC=C\u00f3digo
 ciudadC=Ciudad
 departamentoC=Departamento
 #LOV MOTIVO
 motivosM=Motivos Contratos
-buscarM=Buscar Motivo Contratos: 
+buscarM=Buscar Motivo: 
 codigoM=C\u00f3digo
-nombreM=Nombre del Motivo del Contrato
+nombreM=Nombre
 #LOV TIPOS CONTRATOS
 tiposT=Tipos Contratos
 buscarT=Buscar Tipo Contrato: 
@@ -97,3 +97,5 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'VIGENCIASTIPOSCONTRATOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 fispX=Fecha Inicio Proceso Sustitucion
 fispXX=Fecha_Inicio_Proceso_Sustitucion
+fispH=Fecha Sus.
+fifH=Fecha Flex.
