--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/procesoproductivo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/procesoproductivo.properties
@@ -38,7 +38,7 @@ borrado2=Registros
 guardadoExitoso=Se ha guardado correctamente los cambios
 validarNuevo=Para agregar es necesario adicionar:
 atencionRastros=ATENCI\u00d3N
-confirmarRastroHistorico=La tabla SUCURSALES tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla PROCESOSPRODUCTIVOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
