--- a/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
@@ -38,7 +38,7 @@ file.reference.ojdbc6.jar=..\\Librerias\\ojdbc6.jar
 file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-3.9-20121203.jar
 file.reference.poi-ooxml-schemas-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-schemas-3.9-20121203.jar
-file.reference.primefaces-3.5.jar=..\\Librerias\\primefaces-3.5.jar
+file.reference.primefaces-3.5-V1.0.jar=..\\Librerias\\primefaces-3.5-V1.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -60,7 +60,6 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.9-20121203.jar}:\
     ${file.reference.poi-ooxml-schemas-3.9-20121203.jar}:\
     ${file.reference.ojdbc6.jar}:\
-    ${file.reference.primefaces-3.5.jar}:\
     ${file.reference.commons-beanutils-1.8.3.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
@@ -70,13 +69,13 @@ javac.classpath=\
     ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.jasperreports-5.5.0.jar}:\
     ${file.reference.jxl.jar}:\
-    ${file.reference.jfreechart-1.0.17.jar}
+    ${file.reference.jfreechart-1.0.17.jar}:\
+    ${file.reference.primefaces-3.5-V1.0.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${libs.eclipselink.classpath}:
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
