--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -283,3 +283,11 @@ configuracionDetalle=Configuracion Detalle
 textConfiguracion=Seleccione las columnas detalle (adicionales) que desea consultar. Tendra la posibilidad de seleccionar hasta 10 campos. Al elegir mas columnas detalle se actualizaran los parametros de sus reportes a las fechas actuales del sistema.
 detallesBusqueda=Detalles de la Busqueda
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
+textDetalleConfiguracion=Seleccione las columnas detall (adicionales) que desea consultar. tendra la posibilidad de seleccionar hasta 10 campos. Al elegir mas columnas detalle se actualizaran los parametros de sus reportes a las fechas actuales del sistema.
+detalleConfiguracionD=Configuracion Detalle
+buscarCDE=Buscar Configuracion: 
+campo=Campo
+detalleBusqueda=Detalle de Busqueda
+eliminarColumna=Borrar Columna
+anadirParametros=[ A\u00f1adir a Parametros ]
+refrescar=Refrescar
