--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -93,7 +93,7 @@ finalVPP= Fecha Final:
 #Duplicar registro VPP
 duplicarregistroVPP= Duplicar Registro Prorrateo de Proyecto
 #EDITAR
-fechavigenciaE=Fecha Vigencia Historicos Localizacion
+fechavigenciaE=Fecha Vigencia Localizacion
 centrocostoE=Centro Costo
 localizacionE=Localizacion
 motivoE=Motivo
@@ -102,12 +102,12 @@ centrocostosEVP=Centro Costos
 porcentajeEVP=Porcentaje (%)
 proyectoEVP=Proyecto
 subporcentajeEVP=SubPorcentaje
-fechainicialEVP=Fecha Inicial Prorrateo Centro Costo
-fechafinalEVP=Fecha Final Prorrateo Centro Costo
+fechainicialEVP=Fecha I. Prorrateo Centro Costo
+fechafinalEVP=Fecha F. Prorrateo Centro Costo
 porcentajeEVPP=Porcentaje (%)
 proyectoEVPP=Proyecto
-fechainicialEVPP=Fecha Inicial Prorrateo Proyecto
-fechafinalEVPP=Fecha Final Prorrateo Proyecto
+fechainicialEVPP=Fecha I. Prorrateo Proyecto
+fechafinalEVPP=Fecha F. Prorrateo Proyecto
 #Dialogos de la p\u00e1gina
 guardarCambiosVigenciaProrrateo=Desea guardar los cambios realizados en Prorrateo por Centro Costo?
 guardarCambiosVigenciaProrrateoProyecto=Desea guardar los cambios realizados en Prorrateo por Proyecto?
