--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte.properties
@@ -66,3 +66,8 @@ duplicarD=Duplicar Registro
 codigoE=Codigo
 conceptoE=Concepto
 operandoE=Operando
+conceptoSoporte=Conceptos Soportes
+conceptoSoporteD=Buscar Concepto Soporte :
+descripcion=Descripci\u00f3n
+duplicarDD=Duplicar Concepto Soporte
+conceptoD=Buscar Concepto:
