--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulasaseguradas.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulasaseguradas.properties
@@ -68,3 +68,7 @@ agregar=Agregar
 limpiar=Limpiar
 duplicarD=Duplicar Registro
 duplicarDD=Duplicar Formulas Aseguradas
+buscarFormulasAseguradas=Buscar F\u00f3rmula
+mostrarTodos=Mostrar Todos
+formulaD=F\u00f3rmulas
+buscarFormulasD=Buscar F\u00f3rmula
