--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/sucursal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/sucursal.properties
@@ -61,3 +61,6 @@ agregar=Agregar
 tituloD=Duplicar Registro
 tituloDD=Duplicar Sucursal
 duplicarB=Duplicar
+buscarBancoD=Buscar Banco:
+ciudadesD=Ciudades
+buscarCiudad=Buscar Ciudad:
