--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -53,13 +53,13 @@ fechainicialVDXX=Fecha_Inicial
 fechafinalVDX=Fecha Final
 fechafinalVDXX=Fecha_Final
 #Editar Pendientes
-fechainicialEP=Fecha Inicial Vacaciones Pendientes
-fechafinalEP=Fecha Final Vacaciones Pendientes
-diaspendientesEP=Dias Pendientes Vacaciones Pendientes
+fechainicialEP=Fecha I. Vacaciones Pendientes
+fechafinalEP=Fecha F. Vacaciones Pendientes
+diaspendientesEP=Dias Pendientes Vacaciones
 #Editar Disfrutadas
-fechainicialED=Fecha Inicial Vacaciones Disfrutadas
-fechafinalED=Fecha Final Vacaciones Disfrutadas
-diaspendientesED=Dias Pendientes Vacaciones Disfrutadas
+fechainicialED=Fecha I. Vacaciones Disfrutadas
+fechafinalED=Fecha F. Vacaciones Disfrutadas
+diaspendientesED=Dias Pendientes Vacaciones
 #Nuevo registro Vacaciones Pendientes
 nuevoregistroVP=Nuevo Registro Vacaciones Pendientes
 ingresarnuevoVP=Ingresar nueva informaci\u00f3n del empleado
