--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -69,15 +69,15 @@ comentariotd=Comentario:
 #Duplicar Registro TD
 duplicarregistrotd=Duplicado Registro Descanso Tomado en Dinero
 #EDITAR!
-fechaE=Fecha Vigencia Jornada Trabajador
+fechaE=Fecha Jornada Trabajador
 nombreE=Nombre Jornada
 tipoE=Tipo Descanso
 cdtE=Comentario Descanso Tiempo
-fidtE=Fecha Inicial Descanso Tiempo
-ffdtE=Fecha Final Descanso Tiempo
+fidtE=Fecha I. Descanso Tiempo
+ffdtE=Fecha F. Descanso Tiempo
 cddE=Comentario Descanso Dinero
-fiddE=Fecha Inicial Descanso Dinero
-ffddE=Fecha Final Descanso Dinero
+fiddE=Fecha I. Descanso Dinero
+ffddE=Fecha F. Descanso Dinero
 #Guardar en descanso Tiempo y Diner
 gdd=\u00bfDesea guardar los cambios realizados en Descanso Tomado en Dinero?
 gdt=\u00bfDesea guardar los cambios realizados en Descanso Tomado en Tiempo?
