--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -81,8 +81,8 @@ inicialVP=Fecha Inicial:
 finalVP=Fecha Final: 
 proyectoVP=Proyecto: 
 subporcentajeVP=Sub Porcentaje: 
-#Duplicar Registro VP
-duplicarregistroVP=Duplicado Registro Prorrateo de Centro Costos
+#Duplicar registro VPP
+duplicadoregistroVP=Duplicado Registro Prorrateo de Centro Costos
 #Nuevo registro VPP
 nuevoregistroVPP=Nuevo registro Prorrateo de Proyecto
 ingresarnuevoVPP=Ingresar Nueva informacion para Prorrateo Proyecto
