--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -79,8 +79,8 @@ observacionesVS=Observaciones:
 #DuplicarRegistroVS
 duplicarregistroVS=Duplicar Registro
 #Nuevo Registro VA
-nuevoregistroVA=Nuevo Registro Vigencias Afiliaciones
-ingresarnuevaVA=Ingresar nueva informaci\u00f3n para vigencias afiliaciones
+nuevoregistroVA=Nuevo Registro Vigencias Sueldos
+ingresarnuevaVA=Ingresar nueva informaci\u00f3n para vigencias sueldos
 fechainicialVA=Fecha Inicial: 
 fechafinalVA=Fecha Final: 
 terceroVA=Tercero: 
@@ -89,7 +89,7 @@ valorVA=Valor:
 #DuplicarRegistroVA
 duplicarregistroVA=Duplicar Registro Vigencias Afiliaciones
 #EDITAR
-editarFechaVigenciaD=Fecha Vigencia Sueldo del Empleado
+editarFechaVigenciaD=Fecha Vigencia Sueldo
 editarMotivoCambioSueldoD=Motivo Cambio Sueldo
 editarTipoSueldoD=Tipo Sueldo
 editarVigenciaRetroactivo=Vigencia del Retroactivo
@@ -98,8 +98,8 @@ editarObservacionesD=Observaciones
 editarTerceroVAD=Tercero
 editarValorVAD=Valor
 editarTipoEntidadVAD=Tipo Entidad
-editarFechaInicialVAD=Fecha Inicial Vigencia Afiliaciones
-editarFechaFinalVAD=Fecha Final Vigencia Afiliaciones
+editarFechaInicialVAD=Fecha I. Vigencia Sueldo
+editarFechaFinalVAD=Fecha F. Vigencia Sueldo
 #Dialogos Varios
 guardarCambiosVigenciasAfiliaciones=\u00bfDesea guardar los cambios realizados en Vigencias Afiliaciones?
 negacionNuevaS= Los campos Fecha Vigencia-Fecha Retroactivo-Motivo Cambio Sueldo-Tipo Sueldo-Valor son obligatorios.
