--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
@@ -66,7 +66,7 @@ errorFechasRegistro=Error de fechas. La fecha inicial es mayor a la fecha final.
 errorExistenciaTipoEntidad=Se encuentra un registro con la misma entidad y fecha final indefinida. No es posible ingresar el nuevo registro
 errorTerceroSucursal=Error con tercero sucursal
 errorFechaMenorContratacion=Error de fechas. La fecha ingresada es menor a la fecha de contratacion del empleado. Se recomienda ingresar una fecha mayor a la de contratacion.
-errorFechaInicialRegistro=Error de fechas. Se recomienda usar el dia primero del mes para ingresar el nuevo registro.
+errorFechaInicialRegistro=Se recomienda usar el dia primero del mes para ingresar el nuevo registro.
 ok=Ok
 #Exportar
 inicialX=Fecha Inicial
