--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte.properties
@@ -15,8 +15,8 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Proceso Productivo
-eliminar=Borrar Proceso Productivo
+nuevo=Nuevo Concepto Soporte
+eliminar=Borrar Concepto Soporte
 duplicar=Duplicar Concepto Soporte
 rastro=Rastro
 refrescar=Refrescar
@@ -66,3 +66,8 @@ duplicarD=Duplicar Registro
 codigoE=Codigo
 conceptoE=Concepto
 operandoE=Operando
+conceptoSoporte=Conceptos Soportes
+conceptoSoporteD=Buscar Concepto Soporte :
+descripcion=Descripci\u00f3n
+duplicarDD=Duplicar Concepto Soporte
+conceptoD=Buscar Concepto:
