--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -44,6 +44,7 @@ codigoalternativoN=Codigo Alternativo:
 #DuplicarRegistro
 duplicarregistro= Duplicar Ciudad
 #LovDepartamento
+buscarD=Buscar Departamento: 
 departamentoN= Nombre Departamento
 #Validacion
 existe=La ciudad que desea agregar, ya se encuentra en la base de datos. Porfavor, ingrese una ciudad diferente.
@@ -60,3 +61,5 @@ errorObjetosDB=La tabla 'CIUDADES' no se encuentra en ObjetosDB. Porfavor comuni
 codigoAlternativo=Codigo_Alternativo
 noombre=Nombre
 departamentos=Departamentos
+#Validacion
+nombreVacio=El nombre de una ciudad no puede ser vacio
