--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -80,3 +80,44 @@ horasdiasE=Horas/Dias
 minutoshorasE=Minutos/Horas
 tipoE=Tipo
 btnAcumuladoNovedad=Acumulado por Novedad
+#NUEVO
+conceptoN=Concepto: 
+descripcionconceptoN=Descripcion Concepto: 
+fechainicialN=Fecha Inicial: 
+fechafinalN=Fecha Final: 
+valorN=Valor: 
+saldoN=Saldo: 
+codigoN=Codigo: 
+descripcionperiodicidadN=Descripcion Periodicidad: 
+nitN=N.I.T: 
+nombredelterceroN=Nombre del Tercero: 
+formulaN=Formula: 
+horasdiasN=Horas/Dias: 
+minutoshorasN=Minutos/Horas: 
+tipoN=Tipo: 
+#LOV FORMULA
+formulasF=Formulas
+buscarF=Buscar Formula: 
+nombreF=Nombre
+#LOV CONCEPTOS
+conceptosC=Conceptos
+buscarC=Buscar Concepto: 
+codigoC=Codigo
+descripcionC=Descripcion
+nombreC=Nombre
+#LOV PERIODICIDAD
+periodicidadesP=Periodicidades
+buscarP=Buscar Periodicidad: 
+codigoP=Codigo
+nombreP=Nombre
+#LOV TERCEROS
+tercerosT=Terceros
+buscarT=Buscar Tercero: 
+nitT=N.I.T
+nombreT=Nombre
+#LOV EMPLEADO
+empleadosE=Empleados
+buscarE=Buscar Empleado: 
+nombreE=Nombre
+codigoE=Codigo
+tipoE=Tipo
