--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -305,3 +305,8 @@ masculino=MASCULINO
 sexo=Sexo
 ciudadNacimiento=Ciudad Nacimiento
 ciudadDocumento=Ciudad Documento
+editarNumeroDocumentoModDatosPersonales=Numero Documento - Personal
+editarCiudadDocumentoModDatosPersonales=Ciudad Documento - Personal
+editarCiudadNacimientoModDatosPersonales=Ciudad Nacimiento - Personal
+editarFechaInicialModDatosPersonales=Fecha Inicial - Personal
+editarFechaFinalModDatosPersonales=Fecha Final - Personal
