PROYECTO01 --> DESAROLLO ( WAR -  02/05/2014 )

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -310,3 +310,42 @@ editarCiudadDocumentoModDatosPersonales=Ciudad Documento - Personal
 editarCiudadNacimientoModDatosPersonales=Ciudad Nacimiento - Personal
 editarFechaInicialModDatosPersonales=Fecha Inicial - Personal
 editarFechaFinalModDatosPersonales=Fecha Final - Personal
+factorRH=Factor RH
+textFactorRH=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda tanto por Factor de riesgo, como por Grupo sangu\u00edneo.
+textFactorRH2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Factor RH.
+tabDatosFactorRH=Parametros de Factor RH
+grupoSanguineo=Grupo Sanguineo
+fechaInicio=Fecha Inicial
+estadoCivil=Estado Civil
+textEstadoCivil=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Estados Civiles, tanto los Actuales como Hist\u00f3ricos de los Empleados.
+textEstadoCivil2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Estado Civil.
+tabDatosEstadoCivil=Parametros de Estado Civil
+estadosCivilesD=Estados Civiles
+buscarECEC=Buscar Estado Civil: 
+ciudadesD=Ciudades
+buscarCDP=Buscar Ciudad: 
+departamento=Departamento
+opcion4EstadoCivil=4. Si no Ingresa fechas, este traer\u00e1 el actual estado civil.
+editarEstadoCivilModEstadoCivil=Descripcion - Estado Civil
+editarFechaInicialModEstadoCivil=Fecha Inicial - Estado Civil
+editarFechaFinalModEstadoCivil=Fecha Final - Estado Civil
+desde=Desde
+hasta=Hasta
+lectura=Lectura
+conversacion=Conversacion
+idioma=Idioma
+tabDatosIdioma=Parametros de Idioma
+textIdioma2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Idiomas.
+opcion4Idioma=4. Si no Ingresa porcentajes, este no filtrar\u00e1 por porcentajes.
+textIdioma=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Idiomas que manejan los Empleados segun sus porcentajes de Conversaci\u00f3n,Lectura y Escritura.
+escritura=Escritura
+idiomasD=Idiomas
+buscarII=Buscar Idioma: 
+editarEscrituraHastaModIdioma=% Hasta - Escritura
+editarEscrituraDesdeModIdioma=% Desde - Escritura
+editarLecturaHastaModIdioma=% Hasta - Lectura
+editarLecturaDesdeModIdioma=% Desde - Lectura
+editarConversacionHastaModIdioma=% Hasta - Conversacion
+editarConversacionDesdeModIdioma=% Desde - Conversacion
+editarIdiomaModIdioma=Nombre - Idioma
+errorIdiomaPorcentajes=El porcentaje Hasta es menor al porcentaje Desde
