--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -248,3 +248,5 @@ primerApellidoXX=Primer_Apellido
 segundoApellidoX=Segundo Apellido
 segundoApellidoXX=Segundo_Apellido
 nombreX=Nombre
+msgborrarLiquidacion=\u00bfEsta seguro(a)  que desea borrar la liquidaci\u00f3n?
+msgborrarLiquidacionPorFuera=\u00bfEsta seguro(a) que desea borrar la liquidaci\u00f3n de pagos por fuera de nomina?
