--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -56,7 +56,7 @@ fliquidacion=F.Liquidacion
 at=AT
 ep=EP
 numero=No.Certificado
-cdiagnostico=C.Diagnostico
+cdiagnostico=C.D
 prorroga=Prorroga
 periodo=Periodo
 tercero=Tercero
@@ -129,3 +129,4 @@ fechafinal=Fecha Final
 fechanotificacion=Fecha Notificacion
 diagnosticos=Diagnosticos
 hora=Hora
+reportada=Reportada a la Entidad
