--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
@@ -77,7 +77,7 @@ deseacontinuar=\u00bfDesea Continuar?
 errorDias=Esta ingresando fechas de la novedad (Desde - Hasta) con un rango superior a un mes (30 d\u00edas). Cerci\u00f3rese que esto es correcto. Recuerde que deben corresponder a la minima unidad de liquidaci\u00f3n.
 alertaFechas=Esta ingresando fechas de la novedad (Desde - Hasta) con un rango superior a un mes (30 d\u00edas). Cerci\u00f3rese que esto es correcto. Recuerde que deben corresponder a la minima unidad de liquidaci\u00f3n.
 errorFechas1=!La fecha de corte [
-errorFechas2=] no coincide con el periodo activo!. [
+errorFechas2=] no coincide con el periodo activo! [
 lovvacia=No hay elementos en la lista de valores.
 #Exportar
 fechadesdeX=Fecha Desde
