--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -42,9 +42,9 @@ tipoT=Tipo de Contrato
 #NUEVO REGISTRO
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar Nueva Informaci\u00f3n del Empleado
-fechaN=Fecha: 
-motivoN=Motivo Contrato: 
-tipoN=Tipo Contrato: 
+fechaN=*Fecha: 
+motivoN=*Motivo Contrato: 
+tipoN=*Tipo Contrato: 
 ciudadN=Ciudad: 
 fisN=Fecha Inicio Sustituci\u00f3n: 
 fifN=Fecha Inicio Flexibilizaci\u00f3n: 
