--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -84,7 +84,7 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
+validacionNuevo=Para agregar un nuevo registro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
@@ -109,3 +109,5 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+salir=Salir
+fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
