--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -86,6 +86,7 @@ validacionNuevo=Para agregar una nueva vigencia es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+salir=Salir
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASTIPOSCONTRATOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASTIPOSCONTRATOS tiene rastros historicos, \u00bfDesea continuar?
