PROYECTO01 --> ORIGIN MASTER - WAR (19/05/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -310,3 +310,123 @@ editarCiudadDocumentoModDatosPersonales=Ciudad Documento - Personal
 editarCiudadNacimientoModDatosPersonales=Ciudad Nacimiento - Personal
 editarFechaInicialModDatosPersonales=Fecha Inicial - Personal
 editarFechaFinalModDatosPersonales=Fecha Final - Personal
+factorRH=Factor RH
+textFactorRH=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda tanto por Factor de riesgo, como por Grupo sangu\u00edneo.
+textFactorRH2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Factor RH.
+tabDatosFactorRH=Parametros de Factor RH
+grupoSanguineo=Grupo Sanguineo
+fechaInicio=Fecha Inicial
+estadoCivil=Estado Civil
+textEstadoCivil=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Estados Civiles, tanto los Actuales como Hist\u00f3ricos de los Empleados. Los parametros de fechas funcionan asi:
+textEstadoCivil2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Estado Civil.
+tabDatosEstadoCivil=Parametros de Estado Civil
+estadosCivilesD=Estados Civiles
+buscarECEC=Buscar Estado Civil: 
+ciudadesD=Ciudades
+buscarCDP=Buscar Ciudad: 
+departamento=Departamento
+opcion4EstadoCivil=4. Si no Ingresa fechas, este traer\u00e1 el actual estado civil.
+editarEstadoCivilModEstadoCivil=Descripcion - Estado Civil
+editarFechaInicialModEstadoCivil=Fecha Inicial - Estado Civil
+editarFechaFinalModEstadoCivil=Fecha Final - Estado Civil
+desde=Desde
+hasta=Hasta
+lectura=Lectura
+conversacion=Conversacion
+idioma=Idioma
+tabDatosIdioma=Parametros de Idioma
+textIdioma2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Idiomas. 
+opcion4Idioma=4. Si no Ingresa porcentajes, este no filtrar\u00e1 por porcentajes.
+textIdioma=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Idiomas que manejan los Empleados segun sus porcentajes de Conversaci\u00f3n,Lectura y Escritura. Los porcentajes funcionan asi: 
+escritura=Escritura
+idiomasD=Idiomas
+buscarII=Buscar Idioma: 
+editarEscrituraHastaModIdioma=% Hasta - Escritura
+editarEscrituraDesdeModIdioma=% Desde - Escritura
+editarLecturaHastaModIdioma=% Hasta - Lectura
+editarLecturaDesdeModIdioma=% Desde - Lectura
+editarConversacionHastaModIdioma=% Hasta - Conversacion
+editarConversacionDesdeModIdioma=% Desde - Conversacion
+editarIdiomaModIdioma=Nombre - Idioma
+errorIdiomaPorcentajes=El porcentaje Hasta es menor al porcentaje Desde
+censo=Censos
+textCenso=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Censos. Los parametros de fechas funcionan asi:
+opcion4Censo=4. Si no Ingresa fechas, este traer\u00e1 el \u00faltimo censo Realizado.
+textCenso2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Censos.
+tabDatosCenso=Parametros de Censos
+tipoIndicador=Tipo Indicador
+indicador=Indicador
+tipoIndicadorD=Tipos Indicadores
+buscarTIC=Buscar Tipo Indicador: 
+indicadorD=Indicadores
+buscarIC=Buscar Indicador: 
+editarTipoIndicadorModCenso=Tipo Indicador - Censo
+editarIndicadorModCenso=Indicador - Censo
+editarFechaInicialModCenso=Fecha Inicial - Censo
+editarFechaFinalModCenso=Fecha Final - Censo
+educacionFormal=Educacion Formal
+textEducacionFormal=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Estudios de Educaci\u00f3n Formal que halla realizado el Empleado. Los parametros de fechas funcionan asi:
+opcion4Educacion=4. Si no Ingresa fechas, este traer\u00e1 el \u00faltimo estudio Realizado.
+textEducacionFormal2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Educaci\u00f3n Formal.
+tabDatosEducacionFormal=Parametros de Educacion Formal
+profesion=Profesion
+institucion=Institucion
+realizado=Realizado
+porEmpresa=POR LA EMPRESA
+fueraEmpresa=FUERA DE LA EMPRESA
+institucionD=Instituciones
+buscarIEF=Buscar Institucion: 
+profesionD=Profesiones
+buscarPEF=Buscar Profesion: 
+editarProfesionModEducacionFormal=Profesion - E. Formal
+editarInstitucionModEducacionFormal=Institucion - E. Formal
+editarFechaInicialModEducacionFormal=Fecha Inicial - E. Formal
+editarFechaFinalModEducacionFormal=Fecha Final - E. Formal
+educacionNoFormal=Educacion No Formal
+textEducacionNoFormal=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Estudios de Educaci\u00f3n No Formal que halla realizado el Empleado. Los parametros de fechas funcionan asi:
+textEducacionNoFormal2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Educaci\u00f3n No Formal.
+tabDatosEducacionNoFormal=Parametros de Educacion No Formal
+cursoD=Cursos
+buscarCENF=Buscar Curso: 
+buscarIENF=Buscar Instituto: 
+editarCursoModEducacionNoFormal=Curso - E. No Formal
+editarInstitucionModEducacionNoFormal=Institucion - E. No Formal
+editarFechaInicialModEducacionNoFormal=Fecha Inicial - E. No Formal
+editarFechaFinalModEducacionNoFormal=Fecha Final - E. No Formal
+curso=Curso
+experienciaLaboral=Experiencia Laboral
+textExperienciaLaboral=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Experiencia Laboral. Los parametros de fechas funcionan asi:
+textExperienciaLaboral2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Experiencia Laboral.
+tabDatosExperienciaLaboral=Parametros de Experiencia Laboral
+sectorEconomico=Sector Economico
+buscarMREL=Buscar Motivo Retiro: 
+sectorEconomicoD=Sectores Economicos
+buscarSEEL=Buscar Sector Economico: 
+editarSectorEconomicoModExperienciaLaboral=Sector Economico - E. Laboral
+editarMotivoRetiroModExperienciaLaboral=Motivo Retiro - E. Laboral
+editarEmpresaModExperienciaLaboral=Empresa - E. Laboral
+editarCargoModExperienciaLaboral=Cargo - E. Laboral
+editarFechaInicialModExperienciaLaboral=Fecha Inicial - E. Laboral
+editarFechaFinalModExperienciaLaboral=Fecha Final - E. Laboral
+proyecto=Proyecto
+textProyecto=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Proyectos en que han participado los Empleados. Los parametros de fechas funcionan asi:
+textProyecto2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Proyectos.
+tabDatosProyecto=Parametros de Proyecto
+rol=Rol
+proyectoD=Proyectos
+buscarPP=Buscar Proyecto:
+pryRolD=Roles
+buscarPRYP=Buscar Rol: 
+editarProyectoModProyecto=Proyecto - Proyecto
+editarRolModProyecto=Rol - Proyecto
+editarFechaInicialModProyecto=Fecha Inicial - Proyecto
+editarFechaFinalModProyecto=Fecha Final - Proyecto
+opcion4Proyecto=4. Si no Ingresa fechas, este traer\u00e1 el \u00faltimo Proyecto realizado segun los parametros ingresados.
+cargoPostularse=Cargo a Postularse
+textCargoPostularse=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda por Cargo a Postularse.
+textCargoPostularse2=Para utilizar esta opci\u00f3n habilitela oprimiendo click en Cargo a Postularse.
+tabDatosCargoPostularse=Parametros de Cargos a Postularse
+buscarCCP=Buscar Cargo : 
+editarCargoModCargoPostularse=Cargo - Cargo 
+nomina=Nomina
+personal=Personal
