--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -74,3 +74,4 @@ cerrado=CERRADO
 abierto=ABIERTO
 errorRegNew=Los campos Fecha Inicial-Fecha Final-Estado-Dias Pendientes son obligatorios.
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a 01/01/1900.
+errorFechaContratacion=La fechas ingresadas son menores a la fecha de contratacion del empleado.
