--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -119,3 +119,5 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 errorFechas = La fecha de vigencia es menor a 01/01/1900.
+errorFechaDescanso=La fecha final es menor a la fecha inicial.
+errorNullDescanso=Los campos de fecha inicial y fecha final son obligatorios.
