PROYECTO01 --> ORIGIN MASTER - WAR2 (19/05/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -42,9 +42,9 @@ tipoT=Tipo de Contrato
 #NUEVO REGISTRO
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar Nueva Informaci\u00f3n del Empleado
-fechaN=Fecha: 
-motivoN=Motivo Contrato: 
-tipoN=Tipo Contrato: 
+fechaN=*Fecha: 
+motivoN=*Motivo Contrato: 
+tipoN=*Tipo Contrato: 
 ciudadN=Ciudad: 
 fisN=Fecha Inicio Sustituci\u00f3n: 
 fifN=Fecha Inicio Flexibilizaci\u00f3n: 
@@ -86,6 +86,7 @@ validacionNuevo=Para agregar una nueva vigencia es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+salir=Salir
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASTIPOSCONTRATOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASTIPOSCONTRATOS tiene rastros historicos, \u00bfDesea continuar?
